# Kamyroll-Tauri

./: .gitignore  README.md  changelog.md  index.html  jsconfig.json  package.json  splashscreen.html  vite.config.js
.github/: dependabot.yml
.github/workflows/: beta.yml  main.yml  test-on-pr.yml
public/: kamyroll_logo.webm
scripts/: name-binary.js
src/: app.vue  main.js  routes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: main.css
src/components/: Artplayer.vue  banner.vue  building.vue  channelid.vue  continue.vue  lastepisodes.vue  tendance.vue  trending.vue
src/pages/anime/: info-page.vue
src/pages/favorites/: watchlist-page.vue
src/pages/home/: home-page.vue
src/pages/info/: adn-page.vue  crunchyroll-page.vue  kamyroll-page.vue  nekosama-page.vue
src/pages/search/: search-page.vue
src/pages/watch/: watch-page.vue
src/plugins/: vuetify.js
src/scripts/: channel_id.js  constructor.js  crunchyroll.js  db.js  getMetadata.js  pstreamextractor.js  request.js  subtitles-octopus.js  token.js
src/scripts/extractors/: pstream.js  streamtape.js
src/scripts/misc/: rpc.js
