[package]
name = "kamyroll"
version = "0.3.5"
description = "A tauri app for the Kamyroll project"
authors = ["Nabil"]
license = ""
repository = ""
default-run = "kamyroll"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri", features = ["http-all", "process-command-api", "shell-execute", "shell-sidecar", "system-tray", "window-all"] }
tauri-plugin-window-state = "0.1"
command-group = "1"
# tiny_http = "0.11"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
